--- a/http-api/build.gradle
+++ b/http-api/build.gradle
@@ -1,15 +1,32 @@
+buildscript {
+    dependencies {
+        classpath "io.ratpack:ratpack-gradle:1.6.0"
+    }
+}
+
+
 plugins {
     id 'java'
     id 'groovy'
     id 'application'
 }
 
-mainClassName = 'com.zopa.greeter.Greeter'
+
+apply plugin: "io.ratpack.ratpack-java"
+apply plugin: "idea"
+
+
+mainClassName = 'com.zopa.http.api.HttpApplication'
+
 
 dependencies {
-    compile project(':component-test') 
+    
+    runtime 'org.slf4j:slf4j-simple:1.7.25'
+    
+    compile project(':component-test')
+    
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4', {
         exclude module: 'groovy-all'
     }
+    
 }
-
