--- a/http-api/build.gradle
+++ b/http-api/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     
     runtime 'org.slf4j:slf4j-simple:1.7.25'
     
-    compile project(':component-test')
+    //compile project(':loan-calculator')
     
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4', {
         exclude module: 'groovy-all'
