--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+plugins {
+    id 'com.gradle.build-scan' version '2.0.2'
+}
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+    publishAlways()
+}
+
 allprojects {
     repositories {
         jcenter() 
@@ -7,4 +17,3 @@ allprojects {
 subprojects {
     version = '1.0'
 }
-
