--- a/http-api/build.gradle
+++ b/http-api/build.gradle
@@ -22,8 +22,9 @@ mainClassName = 'com.zopa.http.api.HttpApplication'
 dependencies {
     
     runtime 'org.slf4j:slf4j-simple:1.7.25'
-    
-    //compile project(':loan-calculator')
+
+    compile 'org.codehaus.groovy:groovy:2.4.10'
+    compile project(':loan-calculator')
     
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4', {
         exclude module: 'groovy-all'
