--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'zopa-hiring-test'
 include 'component-test'
 include 'http-api'
 include 'loan-calculator'
+include 'lender-provider'
