--- a/http-api/build.gradle
+++ b/http-api/build.gradle
@@ -18,7 +18,9 @@ mainClassName = 'com.zopa.http.api.HttpApplication'
 dependencies {
     runtime 'org.slf4j:slf4j-simple:1.7.25'
     compile 'org.codehaus.groovy:groovy:2.5.5'
+    compile 'org.projectlombok:lombok:1.18.4'
     compile project(':loan-calculator')
+    compile project(':lender-provider')
     testCompile 'org.spockframework:spock-core:1.2-groovy-2.5', {
         exclude module: 'groovy-all'
     }
